More documentation on bcalls, crt0 code.
Signed-off-by: Conrad Meyer <konrad@tylerc.org>

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
 - Import headers from old tisdcc as ti83.h, ti83p_ion.h, etc.
-- Import source for header/trailer objects for programs from old tisdcc.
 - Figure out what needs to go in a stdlib.
-- Flush out tisdcc options; finish libtisdcc.
 - Figure out how system install will work.
+- Docs.
