--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-- Finish wrapping all of the 83+ bcalls
+- Finish wrapping all of the 83+ bcalls (start at DataSizeA)
 - Figure out how system install will work.
 - Docs.
 - Add default include path, lib path to libtisdcc.
