--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+DEAD PROJECT
+
+This is abandoned. I don't have the time / interest / use for it, so it's pretty
+much dead / abandoned. Leaving the source online because why not? -CEM
+
+===============================================================================
+
 This is TISDCC 0.2.
 
 About:
